fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,11 +34,12 @@ h3 {
 ul {
   text-align: center;
   padding: 0;
+  margin-top: 10px;
 }
 li {
   width: 30%;
-  display: inline-block;
-  vertical-align: top;
+  display: inline;
+  padding: 0 20px;
 }
 .city-pic {
   display: block;
